# grosh-spendings-svc

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
migration/: Cargo.toml
migration/src/: lib.rs  m20241223_000001_create_spendings_table.rs
src/: main.rs
src/application/: errors.rs  mod.rs  response.rs
src/application/commands/: mod.rs  spending_create_command.rs  spending_edit_command.rs  spending_remove_command.rs
src/application/queries/: mod.rs  spendings_list.rs
src/domain/: mod.rs  spending.rs
src/infrastructure/: mod.rs
src/infrastructure/config/: mod.rs
src/infrastructure/database/entities/: mod.rs  prelude.rs  spendings.rs
src/infrastructure/repositories/: mod.rs
src/infrastructure/rest_api/: mod.rs  spending_create_handler.rs  spending_edit_handler.rs  spending_remove_handler.rs  spendings_list_handler.rs
